@@ -180,6 +180,7 @@
 	- fix: %dev(...) needs to map rdev and mtime from metadata.
 	- resurrect --specedit for i18n.
 	- fix: 4 memory leaks eliminated.
+	- fix: yet another segfault from bad metadata prevented.
 
 4.0 -> 4.0.[12]
 	- add doxygen and lclint annotations most everywhere.
